# graph-glad-hep

./: README.md  pyproject.toml
.github/workflows/: ci.yml
graph_glad_hep/: __init__.py  decorrelation.py  encoder.py  evaluate.py  graph_builder.py  losses.py  model.py
tests/: test_encoder.py  test_graph_builder.py  test_losses_and_decorrelation.py
