[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-glad-hep"
version = "0.1.0"
description = "Graph-level anomaly detection with contrastive learning for LHC new physics searches"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "h5py>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black", "flake8", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=graph_glad_hep --cov-report=term-missing"
